src/objects/Reto__c.object
<CustomObject>
    <fields>
        <fullName>Area_de_trabajo__c</fullName>
        <label>Area de trabajo</label>
        <referenceTo>Area_de_trabajo__c</referenceTo>
        <relationshipLabel>Retos</relationshipLabel>
        <relationshipName>Retos</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competidor__c</fullName>
        <label>Competidor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Etapa_del_Reto__c</fullName>
        <label>Etapa del Reto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cerrar</fullName>
                </value>
                <value>
                    <fullName>Prospección</fullName>
                </value>
                <value>
                    <fullName>Diseño</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Compras</fullName>
                </value>
                <value>
                    <fullName>Implementación</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fecha_Compromiso__c</fullName>
        <label>Fecha Compromiso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nombre_del_Reto__c</fullName>
        <label>Nombre del Reto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nota__c</fullName>
        <label>Nota</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Reto</label>
    <nameField>
        <label>Nombre de Reto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>